# mcp-fred

./: .env.example  .gitignore  README.md  fred_server.py  pyproject.toml
.github/workflows/: ci.yml
fred_mcp/: __init__.py  app.py  client.py  errors.py  runtime.py  tools.py  validation.py
fred_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_error_payloads.py  test_http_and_observations.py
